summative.moria.Moria.scala.error
Erreur de compilation :
Moria:10: error: '(' expected but identifier found.
                    if estSurBiscuit(){ramBiscuit()}}
                       ^Moria:10: error: illegal start of simple expression
                    if estSurBiscuit(){ramBiscuit()}}
                                                    ^