summative.moria.Moria.scala.code
def ramBiscut(){
  prendBiscuit()
  while(!estSurBiscuit()){recule()}
  avance()
  poseBiscuit()
  avance()}
droite()
droite()
while(!estFaceMur()){avance()
                    if estSurBiscuit(){ramBiscuit()}}
droite()
avance()
gauche()
avance()